--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -20,5 +20,5 @@
     "monthly": "Monthly",
     "principal": "Principal",
     "interest": "Interest",
-    "your-contact-information": "Your Contact Inforamtion"
+    "your-contact-information": "Your Contact Information"
 }
