Add French translations

--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -1,24 +1,24 @@
 {
-    "loan-details": "Détalles del Préstamo",
-    "contact-information": "Informatión del contacto",
-    "review": "Reviser",
-    "loan-amount": "Monto del Préstamo",
-    "remaining-term": "Término Restante",
-    "next": "próximo",
-    "thank-you": "¡Gracias por tu Solicitud!",
-    "thank-you-more": "Un représentant de Cominicará con usted en breve.",
-    "start-again": "Empezar de Nuevo",
-    "in-review": "Detalles del Préstamo en Revisión",
-    "previous": "Antérieur",
-    "first-name": "Primer Nombre",
-    "last-name": "Apellido",
-    "email-address": "Dirección de Correo Electrónico",
-    "submit-loan-request": "Solicitud de Préstamo actuel",
-    "interest-rate": "Tasa de Interrés",
-    "loan-repayment-schedule": "Programme de Reembolso de Préstamos",
-    "balance": "Solde",
-    "monthly": "Mensité des mensuales",
-    "principal": "Directeur",
-    "interest": "Interrés",
-    "your-contact-information": "tu información de contacto"
+  "loan-details": "Détails du prêt",
+  "contact-information": "Informations de contact",
+  "review": "Résumé de la demande",
+  "loan-amount": "Montant du prêt",
+  "remaining-term": "Durée du prêt",
+  "next": "Suivant",
+  "thank-you": "Merci pour votre demande !",
+  "thank-you-more": "Un agent vous contactera bientôt.",
+  "start-again": "Recommencer",
+  "in-review": "Résumé du prêt",
+  "previous": "Précédent",
+  "first-name": "Prénom",
+  "last-name": "Nom de famille",
+  "email-address": "Courriel",
+  "submit-loan-request": "Soumettre la demande de prêt",
+  "interest-rate": "Taux d'intérêt",
+  "loan-repayment-schedule": "Plan de remboursement du prêt",
+  "balance": "Solde",
+  "monthly": "Mensuel",
+  "principal": "Principal",
+  "interest": "Intérêt",
+  "your-contact-information": "Vos informations de contact"
 }
